some workflow gen scripts

--- a/bayeswave/sim-inspiral-fixed-highfreq-snrs/pmr_config.ini
+++ b/bayeswave/sim-inspiral-fixed-highfreq-snrs/pmr_config.ini
@@ -38,8 +38,6 @@ veto-categories=[1]
 
 [injections]
 events=all
-nrhdf5=/home/jclark/Projects/lvcnr-matter/BNS/bauswein/wdl200av15ls220-137137/wdl200av15ls220-137137.h5
-injfile=/home/jclark/Projects/bns-short-injections/sim-inspiral/sim-inspiral-fixed-highfreq-snrs/HLV-wdl200av15ls220-137137-netSNR_10-TEST.xml.gz
 
 [bayeswave_options]
 ; command line options for BayesWave.  See BayesWave --help
@@ -68,6 +66,7 @@ segfind=/usr/bin/ligolw_segment_query_dqsegdb
 accounting-group = ligo.dev.o3.burst.paramest.bayeswave
 notify-user=james.clark@ligo.org
 notification=Always
+desired-sites="GATech"
 
 ;desired-sites="LIGO_US_LSU_SuperMIC"
 ;desired-sites="NIKHEF"
