pre-launch commit

--- a/bayeswave/sim-inspiral-fixed-highfreq-snrs/pmr_config.ini
+++ b/bayeswave/sim-inspiral-fixed-highfreq-snrs/pmr_config.ini
@@ -24,10 +24,10 @@ ifo-list=['H1','L1','V1']
 [engine]
 install_path=/opt/lscsoft/bayeswave
 bayeswave=%(install_path)s/bin/BayesWave
-bayeswave_post=$(install_path)s/bin/BayesWavePost
+bayeswave_post=%(install_path)s/bin/BayesWavePost
 megaplot=%(install_path)s/bin/megaplot.py
 megasky=%(install_path)s/bin/megasky.py
-singularity="/cvmfs/ligo-containers.opensciencegrid.org/james-clark/bayeswave/latest"
+;singularity="/cvmfs/ligo-containers.opensciencegrid.org/james-clark/bayeswave/latest"
 
 [datafind]
 channel-list={'H1':'H1:DCH-CLEAN_STRAIN_C02','L1':'L1:DCH-CLEAN_STRAIN_C02', 'V1':'V1:Hrec_hoft_V1O2Repro2A_16384Hz'}
